--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 target-version = "py38" # The lowest supported version
+line-length = 100
 
 [tool.ruff.lint]
 # By default, enable all the lint rules.
