--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
       - id: ruff
         name: ruff
         # Add --fix, in case you want it to autofix when this hook runs
-        entry: poetry run ruff check --force-exclude
+        entry: poetry run ruff check --fix --force-exclude
         require_serial: true
         language: system
         types: [ python ]
