--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ pytest-github-actions-annotate-failures = "*"
 pytest-cov = "*"
 python-kacl = "*"
 ruff = ">=0.2.0"
+pydantic = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
